--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "leva": "^0.9.35",
     "r3f-perf": "^7.1.2",
     "react": "^18.2.0",
+    "react-confetti": "^6.1.0",
     "react-dom": "^18.2.0",
     "three": "^0.156.1",
     "zustand": "^4.4.6"
